# SpeedTest

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
speedterm/: __init__.py  __main__.py  cli.py
