[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speedterm"
version = "1.0.0"
description = "Test de vitesse Internet dans le terminal (cross-platform)."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "SpeedTerm contributors" }]
keywords = ["speedtest", "internet", "cli", "terminal", "network", "bandwidth"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.25.0",
    "rich>=13.0.0",
]

[project.scripts]
speedterm = "speedterm.cli:main"

[project.urls]
Homepage = "https://github.com/skm88/speedterm"
Repository = "https://github.com/skm88/speedterm"
Issues = "https://github.com/skm88/speedterm/issues"

[tool.setuptools.packages.find]
include = ["speedterm*"]
